# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cl-to-cd"
version = "0.0.1"
authors = ["Jeff Mendoza <jemendoz@microsoft.com>"]
edition = "2018"
description = "Tools for querying ClearlyDefined for Rust projects using Cargo."
repository = "https://github.com/jeffmendoza/cl-to-cd"
readme = "README.md"
license = "MIT"

[dependencies]
json = "0.11.15"
reqwest = "0.9.24"
